# job_search_agent

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.opencode/plans/: jobagent_simplification_plan.md
config/: config.yaml  intent.yaml  profile.md  prompts.yaml  seeds.txt
scripts/: install_ubuntu24.sh  run.sh  test.sh
src/jobagent/: __init__.py  __main__.py  agent.py  browser.py  company_filters.py  config.py  db.py  discover.py  extract.py  heuristics.py  language.py  llm.py  location.py  logging_utils.py  models.py  profile_knowledge.py  prompts.py  reporting.py  robots.py  scoring.py  structured.py  urltools.py
tests/: conftest.py  test_agent.py  test_bootstrap_queries.py  test_browser.py  test_city_company_export_filters.py  test_company_filters.py  test_config.py  test_db.py  test_db_memory.py  test_discover.py  test_exports.py  test_extract.py  test_heuristics.py  test_job_validation.py  test_llm_budget.py  test_location_radius.py  test_multilingual.py  test_profile_knowledge.py  test_reporting.py  test_scoring.py  test_urltools.py  test_whitelist_mode.py
