[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobagent-local"
version = "0.1.0"
description = "Local autonomous job discovery agent using Playwright, SQLite memory, and an OpenAI-compatible local LLM server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Local Job Agent" }]
dependencies = [
  "playwright>=1.40",
  "requests>=2.31",
  "PyYAML>=6.0",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
jobagent = "jobagent.agent:main"

[tool.setuptools.packages.find]
where = ["src"]
